# ts-flask-urls

./: .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
example/backend/: app.py
example/frontend/: index.html  package-lock.json  package.json  vite.config.ts
example/frontend/src/: App.css  App.tsx  api.ts  index.css
example/frontend/src/flask_urls/: apis.ts  types.ts
rollup-plugin-ts-flask-urls/src/: index.ts
rollup-plugin-typesync/: README.md  package-lock.json  package.json
rollup-plugin-typesync/src/: index.ts
tests/: conftest.py  test_arg_types.py  test_inference.py  test_nested_types.py  test_pydantic.py  test_return_types.py  test_stubs.py  test_typed_dict.py
ts_flask_urls/: __init__.py  cli.py  codegen.py  logger.py  ts_types.py  utils.py
ts_flask_urls/codegen/: extractor.py  writer.py
ts_flask_urls/inference/: __init__.py  base_inferrer.py  mypy_inferrer.py
ts_flask_urls/type_translators/: abstract.py  base_translator.py  flask_translator.py  type_node.py
typesync/: __init__.py  annotations.py  argument_types.py  cli.py  misc.py  utils.py
typesync/codegen/: __init__.py  extractor.py  inference.py  writer.py
typesync/type_translators/: __init__.py  abstract.py  annotations_translator.py  base_translator.py  context.py  flask_translator.py  pydantic_translator.py  type_node.py
